server db connection and dropdown filter and routing

--- a/server/karoodaTestToolServer/Web.config
+++ b/server/karoodaTestToolServer/Web.config
@@ -5,6 +5,9 @@
   -->
 <configuration>
   <appSettings></appSettings>
+  <connectionStrings>
+    <add name="SQLCon" connectionString="Data Source=.\SQL2014;Initial Catalog=TestTool;Integrated Security=True;MultipleActiveResultSets=True;" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
